<resources>
    <string name="app_name">ZhihuDaily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="setting_clear_image_cache">清除图片缓存</string>
    <string name="setting_clear_web_cache">清除网页缓存</string>
    <string name="setting_clear_cookie">清除Cookie</string>
    <string name="clear_cache_success">清除成功</string>

    <string name="drawer_login_text">点击头像登入</string>
    <string name="drawer_myprecious">我的收藏</string>
    <string name="drawer_download">离线下载</string>

    <string name="drawer_index">首页</string>
    <string name="drawer_psy">日常心理学</string>
    <string name="drawer_movie">电影日报</string>
    <string name="drawer_interest">不许无聊</string>
    <string name="drawer_game">游戏日报</string>
    <string name="drawer_design">设计日报</string>
    <string name="drawer_company">大公司日报</string>
    <string name="drawer_finance">金融日报</string>
    <string name="drawer_music">音乐日报</string>
    <string name="drawer_sports">体育日报</string>
    <string name="drawer_cartoon">动漫日报</string>
    <string name="drawer_security">安全日报</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
