<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:id="@+id/drawer_logo_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:id="@+id/drawer_login_textview"
            android:text="@string/drawer_login_text"
            android:paddingStart="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1.07"
            android:src="@drawable/star"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/drawer_precious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/drawer_myprecious"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/download"
            android:paddingTop="8dp"
            android:layout_weight="0.12" />

        <TextView
            android:id="@+id/drawer_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drawer_download" />

    </LinearLayout>


</LinearLayout>
